--- a/app/src/main/res/layout/fragment_pemesanan.xml
+++ b/app/src/main/res/layout/fragment_pemesanan.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Riwayat Peminjaman"
+        android:text="@string/riwayat_peminjaman"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="36sp" />
