- Edit code in FavoriteAdapter - Create HistoryAdapter - Create History Entity - Create HistoryDao for SQL History Table - Create HistoryViewModel - Create HistoryRepository - Add and edit in Favorite Fragment and DetailFavoriteActivity - Edit code in MainActivity - Add logic for history book kamera in PemesananFragment - Edit layout Detail Favorite

--- a/app/src/main/res/layout/activity_detail_favorite.xml
+++ b/app/src/main/res/layout/activity_detail_favorite.xml
@@ -6,11 +6,21 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
+    <Button
+        android:id="@+id/backToMain"
+        android:layout_width="60dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:background="@drawable/ic_baseline_arrow_back_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/cvButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -32,6 +42,19 @@
                     android:contentDescription="@string/gambar_kamera"
                     android:scaleType="fitXY"
                     tools:src="@tools:sample/avatars" />
+
+                <ToggleButton
+                    android:id="@+id/btn_favorite"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_gravity="end"
+                    android:background="@drawable/favorite_toggle"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:textOff=""
+                    android:textOn="" />
             </FrameLayout>
 
             <TextView
@@ -59,7 +82,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="2dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@color/underLine"
@@ -73,6 +96,8 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
+                android:background="@color/bluegrey_200"
+                android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold|italic"
@@ -80,7 +105,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="2dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@color/underLine"
@@ -110,6 +135,14 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/underLine"
+                android:visibility="visible" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -138,113 +171,139 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/underLine"
+                android:visibility="visible" />
+
             <LinearLayout
+                android:id="@+id/linear_book"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:orientation="vertical" >
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/tanggal_pinjam"
                         android:textColor="@color/black"
-                        android:textStyle="bold|italic"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginEnd="66dp"/>
+                        android:textStyle="bold|italic" />
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+                        <ImageButton
+                            android:id="@+id/btn_tanggal_pinjam"
+                            style="@style/Base.Widget.AppCompat.ImageButton"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_baseline_date_range_24"
+                            android:contentDescription="@string/tanggal_pinjam" />
+
+                        <TextView
+                            android:id="@+id/tv_tanggal_pinjam"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="16dp"
+                            android:text="@string/tanggal_pinjam" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+                        <ImageButton
+                            android:id="@+id/btn_jam_pinjam"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_baseline_access_time_24" />
+                        <TextView
+                            android:id="@+id/tv_jam_pinjam"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/jam_pinjam" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:orientation="vertical">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
                         android:textStyle="bold|italic"
                         android:text="@string/tanggal_kembali"/>
-                </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal" >
-
-
-                    <ImageButton
-                        android:id="@+id/btn_tanggal_pinjam"
-                        style="@style/Base.Widget.AppCompat.ImageButton"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_date_range_24"
-                        android:contentDescription="@string/tanggal_pinjam" />
-                    <TextView
-                        android:id="@+id/tv_tanggal_pinjam"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:text="@string/tanggal_pinjam" />
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+                        <ImageButton
+                            android:id="@+id/btn_tanggal_kembali"
+                            style="@style/Base.Widget.AppCompat.ImageButton"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_baseline_date_range_24"
+                            android:contentDescription="@string/tanggal_kembali" />
 
-                    <ImageButton
-                        android:id="@+id/btn_tanggal_kembali"
-                        style="@style/Base.Widget.AppCompat.ImageButton"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_date_range_24"
-                        android:contentDescription="@string/tanggal_kembali" />
-                    <TextView
-                        android:id="@+id/tv_tanggal_kembali"
+                        <TextView
+                            android:id="@+id/tv_tanggal_kembali"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/tanggal_kembali" />
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/tanggal_kembali" />
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+                        <ImageButton
+                            android:id="@+id/btn_jam_kembali"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_baseline_access_time_24" />
+                        <TextView
+                            android:id="@+id/tv_jam_kembali"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/jam_kembali" />
+                    </LinearLayout>
+
 
                 </LinearLayout>
-
-                <Button
-                    android:layout_width="250dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/book"
-                    android:layout_marginTop="16dp" />
 
             </LinearLayout>
 
+            <Button
+                android:id="@+id/btn_book"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/book" />
         </LinearLayout>
 
     </ScrollView>
-
-    <ToggleButton
-        android:id="@+id/btn_message"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="16dp"
-        android:background="@drawable/ic_baseline_email_24"
-        android:backgroundTint="@color/teal_200"
-        android:textOn=""
-        android:textOff=""
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        app:layout_anchor="@id/scrollView2"
-        app:layout_constraintBottom_toTopOf="@id/btn_favorite"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <ToggleButton
-        android:id="@+id/btn_favorite"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="16dp"
-        android:background="@drawable/favorite_toggle"
-        android:textOn=""
-        android:textOff=""
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        app:layout_anchor="@id/scrollView2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
