- Edit layout activity_login - Edit layout activity_register - Edit layout fragment_pemesanan - Add SplashScreen - Add Layout item_row_history for RecyclerView - Change Main Activity to SplashScreenActivity

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -13,10 +13,10 @@
     <item
         android:id="@+id/navigation_pemesanan"
         android:icon="@drawable/ic_baseline_event_24"
-        android:title="@string/pemesanan" />
+        android:title="@string/riwayat" />
 
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_baseline_person_24"
-        android:title="@string/profile" />
+        android:title="@string/logout" />
 </menu>
