--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="bluegrey_200">#819ca9</color>
     <color name="bluegrey_500">#546e7a</color>
     <color name="bluegrey_700">#29434e</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_200">#FDCF2A</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
